test to fix bug on mobile device

--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,7 @@ main {
 }
 
 .full-height {
-  min-height: 100vh;
+  height: 100vh;
 }
 
 #homePage {
